<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="after_watching_ad_for_undo">Thank you for watching a video AD. Now you have 3 extra undos for 2 hours.</string>
    <string name="android_api_low_not_match_facebook">Sorry, the version of you android system is new enough to use this facebook function.</string>
    <string name="ask_reset_the_game">Are you sure to reset the game?</string>
    <string name="award_undos">Reward undos</string>
    <string name="big">Big</string>
    <string name="bigger">Bigger</string>
    <string name="cancel">Cancel</string>
    <string name="classic">Classic</string>
    <string name="close">Close</string>
    <string name="download">Download</string>
    <string name="download_new_game">Download new Game</string>
    <string name="download_our_new_game_html">Download our NEW GAME!</string>
    <string name="endless">Endless Mode</string>
    <string name="error_colon">Error:</string>
    <string name="exit">Exit</string>
    <string name="extend_extra_undo_time">"

Watching a video AD will extend the remaining time of 3 extra undos for another 2 hours. Do you want to watch a video AD now?"</string>
    <string name="extend_extra_undo_time_title">Extend time for 3 extra undos</string>
    <string name="fa_fb_share"> Share</string>
    <string name="fa_leaderboard"> Leaderboard</string>
    <string name="fa_rate"> Rate</string>
    <string name="fa_start_game"> Start Game</string>
    <string name="feedbacok_to_us">Feedback To Us</string>
    <string name="follow_twitter">Follow Twitter</string>
    <string name="follow_us">Follow Us</string>
    <string name="for_now">For now…</string>
    <string name="free_new_game">Free New Game!</string>
    <string name="game_ends_at">Game Ends At</string>
    <string name="game_ends_at_summary">Challenge 2048, 4096, 8192, or Endless.</string>
    <string name="game_over">Game Over!</string>
    <string name="general">General</string>
    <string name="go_on">Tap to Continue</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="how_to_play">How To Play</string>
    <string name="huge">Huge</string>
    <string name="install_and_earn_xx">Install and Earn</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_2048_1">There are some numbers on the board.</string>
    <string name="instruction_2048_2">Swipe any direction(Up,Down,Left,Right) to moves all tiles.</string>
    <string name="instruction_2048_3">A new tile of 2 or 4 will appear on the board after every move.</string>
    <string name="instruction_2048_4">When two tiles with the same number touch, they merge into one!</string>
    <string name="instruction_2048_5">When the board is filled up, you lose.</string>
    <string name="instruction_2048_6">When a 2048 tile is created, you win!</string>
    <string name="instructions_1">Swipe to move all tiles</string>
    <string name="instructions_2">When two tiles with the same number touch, they merge into one!</string>
    <string name="later">Later</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="like_facebook_page">Like Facebook Page</string>
    <string name="menu_tile_mode_3">Small - 3x3</string>
    <string name="menu_tile_mode_4">Classic - 4x4</string>
    <string name="menu_tile_mode_5">Big - 5x5</string>
    <string name="menu_tile_mode_6">Bigger - 6x6</string>
    <string name="menu_tile_mode_8">Huge - 8x8</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_internet">Please make sure you can connect to internet.</string>
    <string name="no_new_game_to_download">"There's no new game to download."</string>
    <string name="no_video_ad_available">Sorry, there is no video to watch right now, please come back later.</string>
    <string name="not_now">Not now</string>
    <string name="not_show_again">"Don't show again"</string>
    <string name="notice">Notice</string>
    <string name="notify_to_play_text">Challenge yourself to solve 2048, 4096 and 8192!</string>
    <string name="notify_to_play_title">Can you get to 2048, 4096?</string>
    <string name="others">Others</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="r_u_sure_exit">Are you sure to exit?</string>
    <string name="r_u_sure_restart_game">Are you sure to restart the game?</string>
    <string name="rate">Rate</string>
    <string name="rate_5_stars">If you like this app, please rate us 5 stars :)</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_later">Rate Later</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="rewarded_video_ad_for_undo">"You have 2 free undos. Watching a video AD will reward you 3 extra undos for 2 hours. 
Do you want to watch a video AD now?"</string>
    <string name="score">SCORE</string>
    <string name="send_mail">Send Mail</string>
    <string name="settings_label">Settings</string>
    <string name="share">Share</string>
    <string name="share_text">"Can you beat my highscore in 2048 game? My highest score is %1$s, what's yours?"</string>
    <string name="show_remaining_time_extra_undo">"The remaining time of 3 extra undos:
"</string>
    <string name="small">Small</string>
    <string name="start_game">Start Game</string>
    <string name="str_2048_plus">2048 Plus</string>
    <string name="video_complete_no_award">Sorry, there is no undo rewarded, since you did not finish watching the video.</string>
    <string name="wall">WALL</string>
    <string name="want_more_undo">Want more undos?</string>
    <string name="yes">Yes</string>
    <string name="you_win">You Win!</string>
    <string name="how_to_play_short">How to play: Swipe left, right, up and down to move the tiles. Two touched tiles with the same number merge into one. Get 2048 to win!</string>
    <string name="Download_new_Game">Download new Game!</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="ad_appodeal_app_key">6a8b77d09c4a9c8aee986ad523ce6bbc35c6edf910be7c35</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_banner_admob_1_id">ca-app-pub-1547661168666425/5956639155</string>
    <string name="ad_banner_admob_1_id_old">ca-app-pub-1547661168666425/7178503990</string>
    <string name="ad_banner_admob_2_id">ca-app-pub-1547661168666425/1012268388</string>
    <string name="ad_banner_admob_3_id">ca-app-pub-1547661168666425/5922724415</string>
    <string name="consent">Consent</string>
    <string name="consent_content">"We have updated our Privacy Policy.
Please read the document to understand the changes.
By choosing Accept, you agree with the Privacy Policy."</string>
    <string name="download_it_to_get">Download it to get</string>
    <string name="fa_arrow_left"></string>
    <string name="fa_arrow_right"></string>
    <string name="flag_scale">1</string>
    <string name="play_new_free_game">Play New Free Game</string>
    <string name="today_offer_label2">app name</string>
    <string name="xx_free_coins">%1$s FREE Coins!</string>
</resources>