<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">
        <ListPreference android:entries="@array/gameEndsAtArray" android:title="@string/game_ends_at" android:key="pref_game_ends_at" android:summary="@string/game_ends_at_summary" android:defaultValue="2048" android:entryValues="@array/gameEndsAtArrayValues" />
        <Preference android:title="@string/instruction" android:key="pref_instruction" android:summary="@string/how_to_play" />
        <Preference android:title="@string/download_new_game" android:key="pref_download_new_game" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/follow_us" android:key="pref_group_follow">
        <Preference android:title="@string/like_facebook_page" android:key="pref_like_fb_page" />
        <Preference android:title="@string/follow_twitter" android:key="pref_follow_twitter" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/others">
        <Preference android:title="@string/feedbacok_to_us" android:key="pref_feedback_to_us" />
        <Preference android:title="@string/privacy_policy" android:key="pref_privacy_policy" />
    </PreferenceCategory>
</PreferenceScreen>