<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/promo_dialog_root" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/promo_dialog_1st_layer" android:tag="@string/flag_scale" android:layout_width="430.0px" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <RelativeLayout android:id="@id/center_content_panel" android:tag="@string/flag_scale" android:background="@drawable/shape_bottom_roundcorner" android:paddingLeft="20.0px" android:paddingTop="16.0px" android:paddingRight="20.0px" android:paddingBottom="20.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_title_bar">
            <TextView android:textSize="20.0px" android:textStyle="normal" android:textColor="@color/gray_2" android:gravity="center" android:id="@id/consent_content" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0px" android:text="@string/consent_content" android:layout_centerHorizontal="true" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/button_panel_1" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0px" android:layout_below="@id/consent_content" android:layout_centerHorizontal="true">
                <Button android:textSize="25.0px" android:textStyle="normal" android:textColor="@color/gray_2" android:id="@id/button_privacypolicy" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="260.0px" android:layout_height="67.0px" android:text="@string/privacy_policy" />
                <Button android:textSize="27.0px" android:textStyle="bold" android:textColor="@color/white" android:id="@id/button_accept" android:tag="@string/flag_scale" android:background="@drawable/btn_rc_green_1_normal" android:layout_width="260.0px" android:layout_height="67.0px" android:layout_marginTop="30.0px" android:layout_marginBottom="30.0px" android:text="@string/accept" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/top_title_bar" android:tag="@string/flag_scale" android:background="@drawable/shape_top_roundcorner_green" android:paddingTop="5.0px" android:paddingBottom="5.0px" android:layout_width="fill_parent" android:layout_height="60.0px" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
            <TextView android:textSize="38.0px" android:textStyle="bold" android:textColor="@color/white" android:id="@id/top_title_bar_text" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consent" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>