<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/promo_dialog_root" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/promo_dialog_1st_layer" android:tag="@string/flag_scale" android:layout_width="430.0px" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <RelativeLayout android:id="@id/center_content_panel" android:tag="@string/flag_scale" android:background="@drawable/shape_bottom_roundcorner" android:paddingLeft="20.0px" android:paddingTop="16.0px" android:paddingRight="20.0px" android:paddingBottom="20.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_title_bar">
            <TextView android:textSize="27.0px" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/promo_app_name" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0px" android:text="New Game" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/promo_app_icon" android:tag="@string/flag_scale" android:layout_width="200.0px" android:layout_height="200.0px" android:layout_marginTop="15.0px" android:src="@drawable/ic_play_game_icon" android:layout_below="@id/promo_app_name" android:layout_centerHorizontal="true" />
            <TextView android:textSize="21.0px" android:textStyle="normal" android:textColor="@color/gray_2" android:id="@id/promo_app_words" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0px" android:text="Play and download it! Play and download it! Play and download it! Play and download it! Play and download it!" android:layout_below="@id/promo_app_icon" android:layout_centerHorizontal="true" />
            <TextView android:textSize="26.0px" android:textStyle="bold" android:textColor="@color/light_black_3" android:id="@id/download_words_1" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0px" android:layout_marginBottom="0.0px" android:text="@string/download_it_to_get" android:layout_below="@id/promo_app_words" android:layout_centerHorizontal="true" />
            <RelativeLayout android:gravity="center" android:id="@id/download_words_2_panel" android:tag="@string/flag_scale" android:paddingRight="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/download_words_1" android:layout_centerHorizontal="true">
                <ImageView android:id="@id/image_many_coins" android:tag="@string/flag_scale" android:layout_width="60.0px" android:layout_height="67.0px" android:layout_marginTop="5.0px" android:src="@drawable/many_coins" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <TextView android:textSize="31.0px" android:textStyle="bold" android:textColor="@color/blue_2" android:id="@id/download_words_2" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0px" android:text="@string/xx_free_coins" android:layout_toLeftOf="@id/image_many_coins" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/button_panel_1" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:layout_below="@id/download_words_2_panel" android:layout_centerHorizontal="true">
                <Button android:textSize="27.0px" android:textStyle="bold" android:textColor="@color/white" android:id="@id/button_download" android:tag="@string/flag_scale" android:background="@drawable/btn_rc_green_1_normal" android:layout_width="190.0px" android:layout_height="67.0px" android:text="@string/download" />
                <Button android:textSize="22.0px" android:textStyle="normal" android:textColor="@color/light_black_3" android:id="@id/button_close" android:tag="@string/flag_scale" android:background="@drawable/btn_rc_gray_1_normal" android:layout_width="100.0px" android:layout_height="67.0px" android:layout_marginLeft="30.0px" android:text="@string/close" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/button_panel_2" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:layout_below="@id/button_panel_1" android:layout_centerHorizontal="true">
                <Button android:textSize="22.0px" android:textStyle="bold" android:textColor="@color/light_black_3" android:id="@id/button_exit_2" android:tag="@string/flag_scale" android:background="@drawable/btn_rc_gray_1_normal" android:layout_width="110.0px" android:layout_height="67.0px" android:text="@string/exit" />
                <Button android:textSize="22.0px" android:textStyle="bold" android:textColor="@color/light_black_3" android:id="@id/button_cancel" android:tag="@string/flag_scale" android:background="@drawable/btn_rc_gray_1_normal" android:layout_width="132.0px" android:layout_height="67.0px" android:layout_marginLeft="30.0px" android:text="@string/cancel" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/top_title_bar" android:tag="@string/flag_scale" android:background="@drawable/shape_top_roundcorner_green" android:paddingTop="5.0px" android:paddingBottom="5.0px" android:layout_width="fill_parent" android:layout_height="60.0px" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
            <TextView android:textSize="32.0px" android:textStyle="bold" android:textColor="@color/white" android:id="@id/top_title_bar_text" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play_new_free_game" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>