<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="@string/flag_scale" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:tag="@string/flag_scale" android:background="@drawable/main_bg_repeat" android:paddingLeft="8.0px" android:paddingTop="15.0px" android:paddingRight="8.0px" android:paddingBottom="25.0px" android:layout_width="430.0px" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="39.0px" android:textStyle="bold" android:textColor="@color/orange_2" android:gravity="center_horizontal" android:id="@id/text_flipper_title" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0px" android:layout_marginBottom="10.0px" android:text="@string/how_to_play" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/normalButtonBoldTextNoShadow" />
        <ViewFlipper android:id="@id/viewflipper" android:tag="@string/flag_scale" android:background="@color/background" android:layout_width="@dimen/help_flipper_container_width" android:layout_height="@dimen/help_flipper_container_height" android:layout_below="@id/text_flipper_title" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/flipper_1_counter_container" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0px" android:layout_below="@id/viewflipper" android:layout_centerHorizontal="true">
            <ImageView android:id="@id/flipper_1_counter_1" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_black" />
            <ImageView android:id="@id/flipper_1_counter_2" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_gray" />
            <ImageView android:id="@id/flipper_1_counter_3" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_gray" />
            <ImageView android:id="@id/flipper_1_counter_4" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_gray" />
            <ImageView android:id="@id/flipper_1_counter_5" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_gray" />
            <ImageView android:id="@id/flipper_1_counter_6" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px" android:layout_marginRight="8.0px" android:src="@drawable/little_circle_gray" />
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/flipper_1_close_button_container" android:tag="@string/flag_scale" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0px" android:layout_marginBottom="0.0px" android:layout_below="@id/flipper_1_counter_container" android:layout_centerHorizontal="true">
            <Button android:textSize="@dimen/help_flipper_directional_text_size" android:textColor="@color/brown" android:id="@id/flipper_prev_button" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:padding="5.0px" android:layout_width="50.0px" android:layout_height="45.0px" android:layout_marginLeft="15.0px" android:text="@string/fa_arrow_left" android:layout_alignParentLeft="true" android:onClick="onClickGoPreviousButton" />
            <Button android:textSize="@dimen/help_flipper_directional_text_size" android:textColor="@color/brown" android:id="@id/flipper_next_button" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:padding="5.0px" android:layout_width="50.0px" android:layout_height="45.0px" android:layout_marginRight="15.0px" android:text="@string/fa_arrow_right" android:layout_alignParentRight="true" android:onClick="onClickGoNextButton" />
            <Button android:textSize="@dimen/help_flipper_button_text_size" android:textColor="@color/white" android:id="@id/flipper_close_button" android:tag="@string/flag_scale" android:background="@drawable/button_1" android:padding="10.0px" android:layout_width="wrap_content" android:layout_height="55.0px" android:text="@string/close" android:layout_centerHorizontal="true" />
            <Button android:textSize="@dimen/help_flipper_button_text_size" android:textColor="@color/white" android:id="@id/flipper_never_open_button" android:tag="@string/flag_scale" android:background="@drawable/button_1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>